# nrf5x_radio

./: CMakeLists.txt  linker.ld  upload_receiver.sh  upload_transmitter.sh
common/: build.cmake
common/src/c/: common.c
common/src/include/: common.h
receiver/: build.cmake
receiver/src/c/: receiver.c
transmitter/src/c/: transmitter.c
